--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -3,8 +3,14 @@
   <head>
   </head>
   <body>
+    <ul>
+      <% _.forEach(patterns, function(pattern) { %>
+        <li><a href="#/<%= pattern.slug %>"><%= pattern.title %></a></li>
+      <% }); %>
+    </ul>
+
     <% _.forEach(patterns, function(pattern) { %>
-      <%= pattern %>
+      <%= pattern.html %>
     <% }); %>
   </body>
 </html>
