Refactored code and added ability to include arbitrary files and folders

--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <ul>
@@ -12,5 +14,8 @@
     <% _.forEach(patterns, function(pattern) { %>
       <%= pattern.html %>
     <% }); %>
+
+    <script src="bower_components/jquery/jquery.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
