--- a/templates/pattern.html
+++ b/templates/pattern.html
@@ -3,7 +3,5 @@
   <div class="output">
     <%= content %>
   </div>
-  <pre class="source">
-    <%- content %>
-  </pre>
+  <pre class="source"><code class="language-markup"><%- content %></code></pre>
 </div>
