--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -1,21 +1,47 @@
 <!doctype html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="bower_components/prism/themes/prism.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <ul>
-      <% _.forEach(patterns, function(pattern) { %>
-        <li><a href="#/<%= pattern.slug %>"><%= pattern.title %></a></li>
-      <% }); %>
-    </ul>
+    <div class="container">
+      <nav class="navbar navbar-default" role="navigation">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
 
-    <% _.forEach(patterns, function(pattern) { %>
-      <%= pattern.html %>
-    <% }); %>
+          <a class="navbar-brand" href="#"><%= title %></a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="main-nav">
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Patterns <b class="caret"></b></a>
+
+              <ul class="dropdown-menu">
+                <% _.forEach(patterns, function(pattern) { %>
+                  <li><a href="#/patterns/<%= pattern.slug %>"><%= pattern.title %></a></li>
+                <% }); %>
+              </ul>
+          </ul>
+        </div>
+      </nav>
+
+      <% _.forEach(patterns, function(pattern) { %>
+        <%= pattern.html %>
+      <% }); %>
+    </div>
 
     <script src="bower_components/jquery/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/prism/prism.js"></script>
   </body>
 </html>
