--- a/templates/pattern.html
+++ b/templates/pattern.html
@@ -1,7 +1,12 @@
-<div class="pattern <%= slug %>">
+<div class="pattern" id="<%= slug %>">
   <h2><%= title %></h2>
+  <p><%= note %></p>
+
+  <hr />
+
   <div class="output">
     <%= content %>
   </div>
+
   <pre class="source"><code class="language-markup"><%- content %></code></pre>
 </div>
