Added ability to specify a prefix for CSS and JS to avoid conflicts

--- a/templates/pattern.html
+++ b/templates/pattern.html
@@ -1,4 +1,4 @@
-<div class="pattern" id="<%= slug %>">
+<div class="<%= prefix %>-pattern" id="<%= slug %>">
   <h2><%= title %></h2>
   <p><%= note %></p>
 
