--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -3,71 +3,37 @@
   <head>
     <title><%= title %></title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- No caching - stolen from http://pattern-lab.info -->
+    <meta http-equiv="cache-control" content="max-age=0">
+    <meta http-equiv="cache-control" content="no-cache">
+    <meta http-equiv="expires" content="0">
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT">
+    <meta http-equiv="pragma" content="no-cache">
 
-    <link rel="stylesheet" href="bower_components/prism/themes/prism.css" />
-
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: serif;
-      }
-
-      .<%= prefix %> {
-        margin-top: 40px;
-      }
-
-      .<%= prefix %>-pattern,
-      .<%= prefix %>-overview {
-        display: none;
-      }
-
-      .<%= prefix %>-pattern.is-active,
-      .<%= prefix %>-overview.is-active {
-        display: block;
-      }
-
-      .<%= prefix %>-container {
-        width: 90%;
-        max-width: 1060px;
-        margin: 0 auto;
-      }
-
-      .<%= prefix %>-header {
-        background-color: #EEE;
-        padding: 10px 20px;
-      }
-
-      .<%= prefix %>-header:after {
-        content: '';
-        display: table;
-        clear: both;
-      }
-
-      .<%= prefix %>-title {
-        float: left;
-      }
-
-      .<%= prefix %>-nav {
-        float: right;
-      }
-    </style>
+    <% _.forEach(stylesheets, function(stylesheet) { %>
+    <link rel="stylesheet" href="<%= stylesheet %>" />
+    <% }); %>
   </head>
   <body>
-    <div class="<%= prefix %>-container">
-      <header class="<%= prefix %>-header">
-        <h1 class="<%= prefix %>-title"><%= title %></h1>
+    <div class="ptrnlib-container">
+      <header class="ptrnlib-header">
+        <h1 class="ptrnlib-title"><%= title %></h1>
 
-        <select class="<%= prefix %>-nav">
-          <option value="#/">--- Listing ---</option>
+        <select class="ptrnlib-nav">
+          <option value="#/">Jump to...</option>
           <% _.forEach(patterns, function(pattern) { %>
           <option value="#/<%= pattern.slug %>"><%= pattern.title %></option>
           <% }); %>
         </select>
+
+        <select class="ptrnlib-view-type">
+          <option value="detailed">Detailed view (show markup, notes)</option>
+          <option value="simple">Simple view</option>
+        </select>
       </header>
 
-      <div class="<%= prefix %>-overview">
+      <div class="ptrnlib-overview">
         <% _.forEach(patterns, function(pattern) { %>
           <a href="#/<%= pattern.slug %>" class="list-group-item">
             <h3 class="list-group-item-heading"><%= pattern.title %></h3>
@@ -76,65 +42,13 @@
         <% }); %>
       </div>
 
-      <div class="<%= prefix %>-listing">
-        <% _.forEach(patterns, function(pattern) { %>
-          <%= pattern.html %>
-        <% }); %>
-      </div>
+      <% _.forEach(patterns, function(pattern) { %>
+        <%= pattern.html %>
+      <% }); %>
     </div>
 
-    <script src="bower_components/prism/prism.js"></script>
-    <script src="bower_components/pathjs/path.min.js"></script>
-    <script>
-      (function() {
-        var activeClass = 'is-active';
-        var patternSelector = '.<%= prefix %>-pattern';
-
-        function iterateNodes(els, cb) {
-          [].forEach.call(els, cb);
-        }
-
-        function removeClassFromAll(patterns) {
-          iterateNodes(patterns, function(pattern) {
-            pattern.classList.remove(activeClass);
-          });
-        }
-
-        function updateSelect(value) {
-          document.querySelector('.<%= prefix %>-nav').value = '#/' + value;
-        }
-
-        Path.root('#/');
-
-        Path.map('#/').to(function() {
-          removeClassFromAll(document.querySelectorAll(patternSelector));
-
-          document.querySelector('.<%= prefix %>-overview').classList.add(activeClass);
-
-          updateSelect('');
-        });
-
-        Path.map('#/:name').to(function() {
-          document.querySelector('.<%= prefix %>-overview').classList.remove(activeClass);
-          removeClassFromAll(document.querySelectorAll(patternSelector));
-
-          document.getElementById(this.params.name).classList.add(activeClass);
-
-          updateSelect(this.params.name);
-        });
-
-        Path.listen();
-
-        var select = document.querySelector('.<%= prefix %>-nav');
-
-        select.addEventListener('change', function() {
-          var path = select.value;
-
-          if(!path) path = '#/';
-
-          window.location.href = path;
-        });
-      })();
-    </script>
+    <% _.forEach(javascripts, function(javascript) { %>
+    <script src="<%= javascript %>"></script>
+    <% }); %>
   </body>
 </html>
