Various styling tweaks

--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -18,7 +18,7 @@
   <body>
     <div class="ptrnlib-container">
       <header class="ptrnlib-header">
-        <h1 class="ptrnlib-title"><%= title %></h1>
+        <h1 class="ptrnlib-title"><a href="#/"><%= title %></a></h1>
 
         <select class="ptrnlib-nav">
           <option value="#/">Jump to...</option>
