--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@ body {
   font-size: 18px;
 }
 
+.ptrnlib-title a {
+  color: #444;
+  text-decoration: none;
+}
+
 .ptrnlib-nav,
 .ptrnlib-view-type {
   float: right;
@@ -102,9 +107,24 @@ body {
 
 .ptrnlib-overview-item h2 {
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
+  font-size: 20px;
+}
+
+.ptrnlib-overview-item p {
+  margin-top: 0;
 }
 
 .ptrnlib-overview-item *:last-child {
   margin-bottom: 0;
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    padding-top: 100px;
+  }
+
+  .ptrnlib-view-type {
+    clear: right;
+  }
 }
