--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -21,7 +21,7 @@
         <h1 class="ptrnlib-title"><a href="#/"><%= title %></a></h1>
 
         <select class="ptrnlib-nav">
-          <option value="#/">Jump to...</option>
+          <option value="#/">Pattern Listing</option>
           <% _.forEach(patterns, function(pattern) { %>
           <option value="#/<%= pattern.slug %>"><%= pattern.title %></option>
           <% }); %>
