Added ability to specify script attributes

--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -50,7 +50,7 @@
     </div>
 
     <% _.forEach(javascripts, function(javascript) { %>
-    <script src="<%= javascript %>"></script>
+    <%= javascript %>
     <% }); %>
   </body>
 </html>
