namespaced ids with ptrnlib-

--- a/templates/pattern.html
+++ b/templates/pattern.html
@@ -1,4 +1,4 @@
-<div class="ptrnlib-pattern" id="<%= slug %>">
+<div class="ptrnlib-pattern" id="ptrnlib-<%= slug %>">
     <div class="ptrnlib-pattern__overview">
         <h2><%= title %></h2>
         <% if(typeof note !== 'undefined') { %>
