--- a/templates/index.html
+++ b/templates/index.html
@@ -4,4 +4,8 @@
             <h2><%= pattern.title %></h2>
         </a>
 <% }); %>
+
+    <footer role="contentinfo" class="ptrnlib-header">
+        <%= header %>
+    </footer>
 </div>
