--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
-
+    <base href="/patterns/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- No caching - stolen from http://pattern-lab.info -->
     <meta http-equiv="cache-control" content="max-age=0">
