--- a/templates/pattern.html
+++ b/templates/pattern.html
@@ -2,29 +2,18 @@
 
     <%= content %>
 
-    <footer role="contentinfo" class="ptrnlib-header">
-        <h1><%= title %></h1>
-        <% if(typeof note !== 'undefined') { %>
-            <%= note %>
-        <% } %>
-        <div class="ptrnlib-pattern__markup">
-            <pre class="source"><code class="language-markup"><%- content %></code></pre>
-        </div>
+    <footer role="contentinfo" class="ptrnlib-header is-active">
 
-       <select class="ptrnlib-nav">
-          <option value="#/">Pattern Listing</option>
-          <% _.forOwn(patterns, function(pattern) {
-              if( typeof pattern.category !== 'undefined' && pattern.category === true ){ %>
-                  <optgroup label="<%= pattern.title %>">
-                  <% _.forEach(pattern.patterns, function(pattern) { %>
-                      <option value="/patterns/<%= pattern.slug %>.html"><%= pattern.title %></option>
-                  <% }); %>
-                  </optgroup>
-              <% } else { %>
-                  <option value="/patterns/<%= pattern.slug %>.html"><%= pattern.title %></option>
-              <% }
-          }); %>
-        </select>
+        <%= header %>
+
+        <div class="ptrnlib-pattern__details">
+            <% if(typeof note !== 'undefined') { %>
+                <%= note %>
+            <% } %>
+            <div class="ptrnlib-pattern__markup">
+                <pre class="source"><code class="language-markup"><%- content %></code></pre>
+            </div>
+        </div>
 
     </footer>
 </div>
