--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <div class="ptrnlib-header__inner">
-    <a class="ptrnlib-toggle" href="#details">toggle details</a>
-    <h1><a href="/patterns/"><%= title %></a></h1>
+    <a class="ptrnlib-handle" href="#details">toggle details</a>
+    <h1 class="ptrnlib-h1"><a href="/patterns/"><%= title %></a></h1>
 
     <select class="ptrnlib-nav">
         <option value="/patterns/">Pattern Listing</option>
@@ -16,4 +16,7 @@
         <% }
         }); %>
     </select>
+
+    <a class="ptrnlib-toggle" href="#ptrnlib-docs">Details</a>
+
 </div>
